--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/><link rel="stylesheet" href="weathereact.1.0.0.css"/></head><body></body><script src="weathereact.1.0.0.js"></script>
+<!doctype html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/><link rel="stylesheet" href="/weathereact.1.0.0.css"/></head><body></body><script src="/weathereact.1.0.0.js"></script>
