publish: Add stretch style for weather container
generated from commit 9c284ec262cfc3e32c0e99c7b95f1dee3fba6fd6

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><head><link href="weathereact.1.0.0.css" rel="stylesheet" type="text/css" /></head><body><h1>Home Page</h1><script src="weathereact.1.0.0.js"></script></body></html>
+<html><head><link href="weathereact.1.0.0.css" rel="stylesheet" type="text/css" /></head><body><script src="weathereact.1.0.0.js"></script></body></html>
