--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><head><link href="weathereact.1.0.0.css" rel="stylesheet" type="text/css" /></head><body><script src="weathereact.1.0.0.js"></script></body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><link href="weathereact.1.0.0.css" rel="stylesheet" type="text/css" /></head><body><script src="weathereact.1.0.0.js"></script></body></html>
